<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/peopleInSpaceCard"
    android:layout_gravity="start"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="6dp"
    tools:showIn="@layout/activity_main"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="8dp"
      android:animateLayoutChanges="true"
      >

    <LinearLayout
        android:id="@+id/collapseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

      <TextView
          android:id="@+id/headerPeople"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/people_in_space_header"
          android:textSize="17sp"
          android:textColor="#212121"
          />

      <ProgressBar
          android:id="@+id/progressPeopleInSpace"
          style="?android:attr/progressBarStyleSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="8dp"
          android:layout_gravity="center|center_vertical"
          android:gravity="center|center_vertical"
          android:visibility="gone"
          />

      <ImageView
          android:id="@+id/collapsePeople"
          android:layout_width="24dp"
          android:layout_height="24dp"
          android:layout_gravity="end"
          android:contentDescription="@string/people_in_space_collapse_view_description"
          android:src="@drawable/ic_action_collapse_dark"
          />

      <ImageView
          android:id="@+id/retryPeople"
          android:layout_width="24dp"
          android:layout_height="24dp"
          android:layout_gravity="end"
          android:contentDescription="@string/people_in_space_retry_view_description"
          android:src="@drawable/ic_action_refresh_dark"
          />
    </LinearLayout>

    <ListView
        android:id="@+id/peopleInSpaceListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:listSelector="@android:color/transparent"
        android:visibility="gone"
        />


  </LinearLayout>
</androidx.cardview.widget.CardView>